feat: authenticate and custom decorator

--- a/package.json
+++ b/package.json
@@ -32,13 +32,21 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^8.0.2",
+    "@nestjs/jwt": "^10.0.2",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "apollo-server-express": "2.x.x",
+    "bcrypt": "^5.1.0",
+    "class-validator": "^0.14.0",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
